Bug 58686 - CRASH when edit CONDITIONAL FORMATTING
Summary: CRASH when edit CONDITIONAL FORMATTING
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other Windows (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.0.0.1 target:4.1.0
Keywords: haveBacktrace, regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-12-23 16:57 UTC by Rainer Bielefeld Retired
Modified: 2012-12-26 14:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt + console logs on master (6.01 KB, text/plain)
2012-12-23 18:30 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-12-23 16:57:17 UTC
Steps how to reproduce [Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta2   -  GERMAN UI / German Locale  [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) :

1. Open Attachment 69521 [details] for Bug 56742 from LibO Start Center
2. Click sheet Tab for first sheet "Gruppe D_2"
3. Right click on sheet Tab for first sheet "Gruppe D_2"
4. context menu 'Move/Copy -> Copy -> To NEW Document -> <OK>
5. New document opens with sheet contents, for missing CF please see 
   "Bug 58677 CONDITIONAL FORMATTING lost after sheet has been copied to new 
    document"
6. Click cell E8 
   > Cell cursor around E8
7. Menu 'Format -> Conditional Formatting -> Conditions'
   CRASH

The crash is 100% reproducible for me

@John:
Can you reproduce this problem?
Comment 1 Rainer Bielefeld Retired 2012-12-23 17:17:18 UTC
Crash also is reproducible for me with Attachment 71072 [details] for Bug 55032.

Server-installation of Master "3.7.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3
already crashese after step 4, but not when copy/paste sheet to the source document.

Already [Reproducible] with server  installation of  "LOdev  4.0.0.0.beta1+   -  ENGLISH UI / German Locale  [Build ID: 6d4a55bf38a1c470c49f904dbbddf94eb2f6154)]"  {tinderbox: Win-x86@6, pull time 2012-12-17 08:36:40} on German WIN7 Home Premium (64bit) with own separate User Profile 

Was still ok  with 
* unzipped  installation of  "LOdev  4.0.0.0.alpha1+   -  ENGLISH UI / German Locale  [Build ID: 76c921de48ee41716b5a500b892945c704da73c)]"  {tinderbox: Win-x86@6, pull time 2012-12-10 09:43:47} on German WIN7 Home Premium (64bit) with own separate User Profile 
* "LibreOffice 3.6.4.3" German UI/ German Locale [Build-ID: 2ef5aff] {pull date 2012-11-28} on German WIN7 Home Premium (64bit) 

So Regression
Comment 2 Julien Nabet 2012-12-23 18:30:04 UTC
Created attachment 72039 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today (commit 07c80d23fadcc2334fe7c6f9ce7b5dafeb88d623), I reproduced the crash.

Attached bt.
Comment 3 Rainer Bielefeld Retired 2012-12-23 18:39:07 UTC
@Julien
That was quick, thank you very much :-)
Comment 4 Julien Nabet 2012-12-23 21:28:22 UTC
Just for information, with 4.0 branch (last commit 99894610482eb8f631083c327ca2f0310391eb23), the file doesn't even open :-(
Here what I do:
- launch Calc
- default file Untitled
- try to open the file
- after some seconds nothing, I'm still with Untitled one (no hangs or error popup)
(tested with a brand new LO profile)  

Noticed these logs:
warn:legacy.osl:5095:1:/home/julien/compile-libreoffice/libo_4_0/xmloff/source/style/xmlimppr.cxx:680: Exception caught; style may not be imported correctly.
warn:legacy.osl:5095:1:/home/julien/compile-libreoffice/libo_4_0/sfx2/source/view/frmload.cxx:410: caught an exception!
in function:void SfxFrameLoader_Impl::impl_handleCaughtError_nothrow(const com::sun::star::uno::Any&, const comphelper::NamedValueCollection&) const
type: com.sun.star.container.NoSuchElementException
message: /org.openoffice.Office.Calc/Formula/Load/ODFRecalcMode
context: N9configmgr10RootAccessE

Markus: one for you?
Comment 5 john.pratt 2012-12-24 00:55:24 UTC
I can reproduce this with both files.  For my file (attached to 55032) I selected A1 instead of E8.
Comment 6 Not Assigned 2012-12-24 02:09:20 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b984cb56d70dec578103dae885ec5868582c0ffe&h=libreoffice-4-0

be safe against invalid cond format cell info, fdo#58686


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Not Assigned 2012-12-24 02:09:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e0dbe9f8c1fa9d2c50895985fe2c374fa9364ac

be safe against invalid cond format cell info, fdo#58686



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2012-12-24 09:11:12 UTC
With master sources and the last commit 9e0dbe9f8c1fa9d2c50895985fe2c374fa9364ac, it's better. If I take the Rainer's steps, I can do this:
7. Menu 'Format -> Conditional Formatting -> Conditions'

Then a popup appear to propose to edit the existing conditional format.
If I say "No", it's ok I can keep on.
If I say "Yes", it crashes.
The problem is I can't retrieve a bt since with gdb i can't reproduce the crash.
Here are the logs at crash:
warn:sc:11070:1:/home/julien/compile-libreoffice/libo/sc/source/core/data/conditio.cxx:2139: ScConditionalFormatList: Eintrag nicht gefunden
warn:sc:11070:1:/home/julien/compile-libreoffice/libo/sc/source/core/data/conditio.cxx:2139: ScConditionalFormatList: Eintrag nicht gefunden
soffice.bin: /home/julien/compile-libreoffice/libo/sc/source/ui/view/cellsh1.cxx:1824: void ScCellShell::ExecuteEdit(SfxRequest&): Assertion `pCondFormat' failed.
warn:legacy.osl:11070:1:/home/julien/compile-libreoffice/libo/framework/source/services/autorecovery.cxx:1187: need at document, at the very least
Comment 9 Julien Nabet 2012-12-24 09:45:33 UTC
With 4.0 branch, I still have the same (can't open the file):
warn:legacy.osl:13916:1:/home/julien/compile-libreoffice/libo_4_0/xmloff/source/style/xmlimppr.cxx:680: Exception caught; style may not be imported correctly.
warn:legacy.osl:13916:1:/home/julien/compile-libreoffice/libo_4_0/sfx2/source/view/frmload.cxx:410: caught an exception!
in function:void SfxFrameLoader_Impl::impl_handleCaughtError_nothrow(const com::sun::star::uno::Any&, const comphelper::NamedValueCollection&) const
type: com.sun.star.container.NoSuchElementException
message: /org.openoffice.Office.Calc/Formula/Load/ODFRecalcMode
context: N9configmgr10RootAccessE

warn:legacy.osl:13916:1:/home/julien/compile-libreoffice/libo_4_0/sc/source/ui/docshell/docsh.cxx:2625: The Modificator should not exist
Comment 10 Not Assigned 2012-12-25 20:09:10 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e9b337456513cf1324a4f3a137ebb3491c2b1c79&h=libreoffice-4-0

one more fix for fdo#58686


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Not Assigned 2012-12-25 20:09:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a06a44c3b342648139e7fa0ff850a4176df60538

one more fix for fdo#58686



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Markus Mohrhard 2012-12-25 20:35:50 UTC
Actually the fix for Bug 58677 is also a fix for this bug here.
Comment 13 Julien Nabet 2012-12-26 14:13:37 UTC
I runned a "make clean && make && make dev-install' on 4.0 and master sources, both updated this morning (commit a97bf2e3bc43a709eb72bdc695f96aeecf1174b1 for 4.0, commit ed338bc212725f422f0def21aafc82f05e350646 for master). Everything worked.
There's still this trace on console:
warn:legacy.osl:8688:1:/home/julien/compile-libreoffice/libo_4_0/xmloff/source/style/xmlimppr.cxx:680: Exception caught; style may not be imported correctly.
but it's another story.

Thank you Markus for the fixes! I put it at VERIFIED