be safe against invalid cond format cell info, fdo#58686

Change-Id: Ie89aee95755d9abd3b82062fac271cfe774174ec